--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,9 @@
 .home {
   /* background-color: #4e90b2 !important; */
   height: 100vh;
+  width: 100vw;
   background-image: /*linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1)), */ url("./images/homeBg.png");
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   /* background-repeat: no-repeat; */
 }
