--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,7 +32,7 @@
 }
 
 .navbar-bg-header {
-  background-color:black;
+  background-color: black;
 }
 
 .nav-link {
@@ -45,23 +45,24 @@
   border-bottom: 0.25rem solid transparent;
 }
 
-.nav-link:hover, .nav-link.active {
+.nav-link:hover,
+.nav-link.active {
   color: rgba(255, 255, 255, 1);
   border-bottom-color: white;
 }
 
-.nav-item{
+.nav-item {
   padding: 0.25rem 0;
   margin-left: 1rem;
   margin-right: 2rem;
   text-decoration: none;
-  color:rgba(255,255,255,0.5);
+  color: rgba(255, 255, 255, 0.5);
 }
-.nav-item:hover{
-  color: rgba(255,255,255,0.8);
+.nav-item:hover {
+  color: rgba(255, 255, 255, 0.8);
 }
-.nav-item.active{
-  color:white;
+.nav-item.active {
+  color: white;
 }
 
 .navbar-logo {
@@ -73,40 +74,44 @@
   margin-left: 1rem;
 }
 
-.card{
-  margin-top: 12em;
+.card {
+  margin-top: 10em;
   padding: 3em;
 }
 
-@media (max-width:990px){
-  .card{
+@media (max-width: 990px) {
+  .card {
     margin-top: 3em;
     margin-bottom: 3em;
   }
 }
 
-.card-img{
+.card-img {
   margin-top: 4em;
 }
 
-.flash p{
+.card-details-img {
+  margin-top: 6.5em;
+}
+
+.flash p {
   font-weight: 500;
   font-size: 0.9rem;
   text-align: center;
-  background-color: rgba(255,0,0,0.5);
+  background-color: rgba(255, 0, 0, 0.5);
 }
 
-.flash-success p{
+.flash-success p {
   font-weight: 500;
   font-size: 0.9rem;
   text-align: center;
   background-color: rgba(0, 255, 76, 0.603);
 }
 
-.card-title{
+.card-title {
   font-size: 2em;
 }
 
-.card-text-heading{
+.card-text-heading {
   font-size: 1.2em;
 }
