--- a/client/src/views/vote/tableRow/tableRow.css
+++ b/client/src/views/vote/tableRow/tableRow.css
@@ -1,8 +1,5 @@
-.voteTableHeader {
-  background-color: #65a0f8 !important;
-}
-
-.voteButton {
+.voteButton,
+.editButton {
   background-color: #4b8ef1;
   color: #fff;
   border-radius: 10px;
@@ -10,16 +7,19 @@
   border: 1px solid #fff;
   outline: none;
 }
-.voteButton:hover {
+.voteButton:hover,
+.editButton:hover {
   background-color: #fff;
   border: 1px solid #4b8ef1;
   color: #4b8ef1;
 }
-.voteButton:focus {
+.voteButton:focus,
+.editButton:focus {
   outline: none;
 }
 
-.voteButtonDisabled {
+.voteButtonDisabled,
+.editButtonDisabled {
   background-color: rgb(221, 216, 216);
   border-radius: 10px;
   padding: 2px 10px;
